# kohdalab-trkr

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SAFETY.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_support.md
.github/workflows/: test.yml
config/: default.json  hisamoto.json  kikuchi.json
desktop/: KohdaLab TRKR.vbs
docs/: api_cleanup_plan.md  api_cleanup_plan_ja.md  api_usage.md  api_usage_ja.md  architecture_handoff.md  architecture_handoff_ja.md  hardware_smoke_test.md  hardware_smoke_test_ja.md  initial_setup.md  measurement_sequences.md  measurement_sequences_ja.md  trkr_gui.md  trkr_gui_ja.md  usage.md  web_ui.md  web_ui_ja.md  windows_setup.md
notebook/: move_abs_notebook.ipynb  signal_monitor_notebook.ipynb  srkr_2d_notebook.ipynb  srkr_notebook.ipynb  strkr_notebook.ipynb  trkr_notebook.ipynb
scripts/: verify_distributions.py  verify_release.py
src/kohdalab/: __init__.py
src/kohdalab/api/: __init__.py  cli.py  config.py  conversion.py  device_requirements.py  experiment.py  measurement_rows.py  measurements.py  models.py  notebook.py  run_metadata.py  scan_limits.py  scan_plan.py  session.py  status.py
src/kohdalab/api/devices/: __init__.py  delay_stage.py  lockin.py  scanner.py
src/kohdalab/apps/: trkr_gui.py  trkr_gui_advanced.py  trkr_gui_config.py  trkr_gui_coordinates.py  trkr_gui_devices.py  trkr_gui_measurement.py  trkr_gui_output.py  trkr_gui_plot.py  trkr_gui_signal.py  trkr_gui_snapshot.py  trkr_gui_test.py  trkr_gui_workers.py  web_ui.py
src/kohdalab/apps/web_static/: __init__.py  index.html  web_ui.css  web_ui.js
src/kohdalab/config/: trkr_config_kikuchi.json
src/kohdalab/instruments/delay_stage/: __init__.py  gsc01.py  gsc01a.py  shot302.py  stages.toml
src/kohdalab/instruments/lockin/: __init__.py  _validation.py  li5640.py  sr5210.py  sr7265.py  sr830.py
src/kohdalab/instruments/scanner/: __init__.py  actuator.toml  conexagap.py  conexcc.py
src/kohdalab/interfaces/: __init__.py  common.py  delay_stage.py  lockin.py  protocols.py  scanner.py
tests/: conftest.py  test_auto_connect.py  test_cli.py  test_conexagap_controller.py  test_conexcc_controller.py  test_config.py  test_conversion.py  test_delay_stage_cache.py  test_delay_stage_device_api.py  test_delay_stage_gsc01a.py  test_delay_stage_microstep.py  test_delay_stage_transports.py  test_device_requirements.py  test_device_session_lifecycle.py  test_device_session_locks.py  test_distribution_verifier.py  test_experiment_session_ownership.py  test_gui_entrypoints.py  test_interface_common.py  test_lockin_api.py  test_lockin_cache.py  test_lockin_li5640.py  test_lockin_sr5210.py  test_lockin_sr7265.py  test_lockin_sr830.py  test_lockin_validation.py  test_measurement_rows.py  test_measurement_rows_schema.py  test_models.py  test_notebook_helpers.py  test_notebooks.py  test_package_version.py  test_project_metadata.py  test_release_verifier.py  test_run_metadata.py  test_scan_limits.py  test_scan_plan_from_config.py  test_scanner_cache.py  test_scanner_coordinates.py  test_scanner_device_api.py  (+14 more)
