[project]
name = "kohdalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "pyserial>=3.5",
    "pyvisa>=1.16.2",
]

[project.optional-dependencies]
gui = [
    "pyside6>=6.11.0",
    "pyqtgraph>=0.14.0",
]
notebook = [
    "anywidget>=0.10.0",
    "ipykernel>=6.29.5",
    "ipython",
    "jupyter",
    "jupyterlab",
    "matplotlib>=3.10.8",
]

[project.scripts]
kohdalab-cli = "kohdalab.api.cli:main"
kohdalab-gui = "kohdalab.apps.trkr_gui:main"
kohdalab-web = "kohdalab.apps.web_ui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kohdalab.apps.web_static" = ["*.html", "*.css", "*.js"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "jupyter",
    "jupyterlab",
    "ipykernel>=6.29.5",
    "ipython",
    "numpy>=2.4.4",
    "matplotlib>=3.10.8",
    "anywidget>=0.10.0",
    "pyside6>=6.11.0",
    "pyqtgraph>=0.14.0",
]
